--- a/res/layout/paint_main.xml
+++ b/res/layout/paint_main.xml
@@ -14,7 +14,7 @@
     	<!-- Paint Board View -->
     	<view class="shira.android.paintdroid.PaintBoardView" android:id="@+id/paint_board_view"
     	    android:layout_width="0dip" android:layout_height="fill_parent" 
-    	    android:layout_weight="0.8" android:scrollbarSize="5dip"/>
+    	    android:layout_weight="0.8" android:scrollbars="horizontal|vertical"/>
     </LinearLayout>
     <LinearLayout android:layout_width="fill_parent" android:layout_height="0dip" 
         android:layout_weight="0.1" android:orientation="horizontal" android:paddingTop="3dip" 
