Adding the color filler image (not active yet).
git-svn-id: svn://localhost/HDBackup/SVNRepositories/PaintDroid/trunk@20 6a9be4b1-2cd3-9b4a-b3a2-91d46eab6722

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -6,7 +6,7 @@
         <item>@drawable/pencil</item>
         <item>@drawable/eraser</item>
         <item>@drawable/color_picker</item>
-        <item>@drawable/ic_launcher</item>
+        <item>@drawable/color_filler</item>
         <item>@drawable/line</item>
         <item>@drawable/rectangle</item>
         <item>@drawable/ellipse</item>
