--- a/res/menu/options_menu.xml
+++ b/res/menu/options_menu.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:id="@+id/new_image_option" android:title="@string/new_image_title"/>
+    <item android:id="@+id/colors_option" android:title="@string/colors_title"/>
 </menu>
