Adding support for drawing text.
git-svn-id: svn://localhost/HDBackup/SVNRepositories/PaintDroid/trunk@23 6a9be4b1-2cd3-9b4a-b3a2-91d46eab6722

--- a/res/layout/paint_main.xml
+++ b/res/layout/paint_main.xml
@@ -14,7 +14,8 @@
     	<!-- Paint Board View -->
     	<view class="shira.android.paintdroid.PaintBoardView" android:id="@+id/paint_board_view"
     	    android:layout_width="0dip" android:layout_height="fill_parent" 
-    	    android:layout_weight="0.8" android:scrollbars="horizontal|vertical"/>
+    	    android:layout_weight="0.8" android:scrollbars="horizontal|vertical"
+    	    android:focusable="true" android:focusableInTouchMode="true"/>
     </LinearLayout>
     <LinearLayout android:layout_width="fill_parent" android:layout_height="0dip" 
         android:layout_weight="0.1" android:orientation="horizontal" android:paddingTop="3dip" 
